Discover api server and ip as candidates. v4.0.218

--- a/trunk/conf/full.conf
+++ b/trunk/conf/full.conf
@@ -396,6 +396,11 @@ rtc_server {
     # @see https://github.com/ossrs/srs/wiki/v4_CN_WebRTC#config-candidate
     # default: *
     candidate *;
+    # If api_as_candidates is on, SRS would try to use the IP of api server, specified by srs.sdk.js request:
+    #       api:string "http://r.ossrs.net:1985/rtc/v1/play/"
+    # in this case, the r.ossrs.net and 39.107.238.185 will be added as candidates.
+    # Default: on
+    api_as_candidates on;
     # The IP family filter for auto discover candidate, it can be:
     #       ipv4        Filter IP v4 candidates.
     #       ipv6        Filter IP v6 candidates.
